# dnd-discord-bot

./: .gitignore  Cargo.toml
src/: Activity.rs  Cat.rs  Handler.rs  Joke.rs  libs.rs  main.rs
src/DnD/: DnDCommands.rs  Schemas.rs  SchemasUtils.rs  mod.rs
src/DnD/CharData/: AbilityScore.rs  Alignments.rs  Background.rs  Language.rs  Proficiencies.rs  Skills.rs  mod.rs  proficiencies.rs
src/DnD/Class/: ClassInfo.rs  ClassLevel.rs  ClassResourceList.rs  MulticlassingInfo.rs  SpellcastingInfo.rs  mod.rs
src/DnD/Class/ClassSpecific/: SPBarbarian.rs  SPBard.rs  SPCleric.rs  SPDruid.rs  SPFactory.rs  SPFighter.rs  SPMonk.rs  SPPaladin.rs  SPRanger.rs  SPRogue.rs  SPSorcerer.rs  SPWarlock.rs  SPWizard.rs  mod.rs
src/DnD/Equipment/: Armor.rs  EquipmentInfo.rs  Gear.rs  Pack.rs  Weapon.rs  mod.rs
src/DnD/GameMechanic/: GameMechanic.rs  mod.rs
src/DnD/Mechanic/: GameMechanic.rs
src/Manager/: Manager.rs  mod.rs
