[package]
name = "discord_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "discord_bot"
path = "src/libs.rs"

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
reqwest = { version = "0.11.2", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
poise = "0.5.7"

[dependencies.serenity]
default-features = false
features = [ "builder",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "rustls_backend",
]
version = "0.12"